@@ -1,3 +1,9 @@
+2008-06-19  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclOOCall.c (AddSimpleClassChainToCallContext): Make sure
+	* tests/oo.test (oo-14.8): that class mixins are processed in the
+	documented order. [Bug 1998221]
+
 2008-06-09  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclOOCall.c (TclOOGetSortedMethodList): Plug memory leak
